# CanteenUI

./: CMakeLists.txt  main.cpp  main.qml
ui/bottomBar/: BottomBar.qml
ui/lowerScreen/: LowerScreen.qml
ui/upperScreen/: UpperScreen.qml
